# movidius-workshop

./: .gitignore  README.md
capi-v2/task1/: .main.cpp.swp  CMakeLists.txt  main.cpp
capi-v2/task3/: CMakeLists.txt  main.cpp
mobile/: benchmark.sh  mobile.py  readme.md  readme.txt  start_flask.sh  start_flask.sh.orig
mobile/datasets/: datasets.py
mobile/inception_v1/: run_infer_for_inception_v1.py
mobile/mnist/: run_infer_for_mnist.py
mobile/models/: model_factory.py
mobile/models/age_gender/: age_gender_mean.npy
mobile/templates/: index.html  result.html
tools/: 01_download_model.sh  03_prepare_graph.sh  04_profile_network.sh  05_profile_network_partial.sh  06_profile_network_partial_1shave.sh  07_check_network_top1.sh  08_check_network_top5.sh  output.gv  output_expected.npy  output_report.html  output_result.npy  output_val.csv
tools/output/: checkpoint  inception-v1.index
